must-gather/cluster-scoped-resources/admissionregistration.k8s.io/validatingwebhookconfigurations/network-node-identity.openshift.io.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: "2024-10-24T13:15:35Z"
  generation: 1
  managedFields:
  - apiVersion: admissionregistration.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:ownerReferences:
          k:{"uid":"5fd09b98-1d3f-4b9a-a44c-e7d1a8665f5d"}: {}
      f:webhooks:
        k:{"name":"node.network-node-identity.openshift.io"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            f:caBundle: {}
            f:url: {}
          f:name: {}
          f:rules: {}
          f:sideEffects: {}
        k:{"name":"pod.network-node-identity.openshift.io"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            f:caBundle: {}
            f:url: {}
          f:name: {}
          f:rules: {}
          f:sideEffects: {}
    manager: cluster-network-operator/operconfig
    operation: Apply
    time: "2024-10-24T13:15:35Z"
  name: network-node-identity.openshift.io
  ownerReferences:
  - apiVersion: operator.openshift.io/v1
    blockOwnerDeletion: true
    controller: true
    kind: Network
    name: cluster
    uid: 5fd09b98-1d3f-4b9a-a44c-e7d1a8665f5d
  resourceVersion: "20240"
  uid: c1ad84e7-8b2a-41f7-9bb7-a1ef5a91b5bc
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURnVENDQW1tZ0F3SUJBZ0lJRW4vMWRTQjZGTGd3RFFZSktvWklodmNOQVFFTEJRQXdUakZNTUVvR0ExVUUKQXd4RGIzQmxibk5vYVdaMExXNWxkSGR2Y21zdGJtOWtaUzFwWkdWdWRHbDBlVjl1WlhSM2IzSnJMVzV2WkdVdAphV1JsYm5ScGRIa3RZMkZBTVRjeU9UYzNORGsxTkRBZUZ3MHlOREV3TWpReE16QXlNek5hRncwek5ERXdNakl4Ck16QXlNelJhTUU0eFREQktCZ05WQkFNTVEyOXdaVzV6YUdsbWRDMXVaWFIzYjNKckxXNXZaR1V0YVdSbGJuUnAKZEhsZmJtVjBkMjl5YXkxdWIyUmxMV2xrWlc1MGFYUjVMV05oUURFM01qazNOelE1TlRRd2dnRWlNQTBHQ1NxRwpTSWIzRFFFQkFRVU [...]
    url: https://127.0.0.1:9743/node
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: node.network-node-identity.openshift.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - '*'
    apiVersions:
    - '*'
    operations:
    - UPDATE
    resources:
    - nodes/status
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURnVENDQW1tZ0F3SUJBZ0lJRW4vMWRTQjZGTGd3RFFZSktvWklodmNOQVFFTEJRQXdUakZNTUVvR0ExVUUKQXd4RGIzQmxibk5vYVdaMExXNWxkSGR2Y21zdGJtOWtaUzFwWkdWdWRHbDBlVjl1WlhSM2IzSnJMVzV2WkdVdAphV1JsYm5ScGRIa3RZMkZBTVRjeU9UYzNORGsxTkRBZUZ3MHlOREV3TWpReE16QXlNek5hRncwek5ERXdNakl4Ck16QXlNelJhTUU0eFREQktCZ05WQkFNTVEyOXdaVzV6YUdsbWRDMXVaWFIzYjNKckxXNXZaR1V0YVdSbGJuUnAKZEhsZmJtVjBkMjl5YXkxdWIyUmxMV2xrWlc1MGFYUjVMV05oUURFM01qazNOelE1TlRRd2dnRWlNQTBHQ1NxRwpTSWIzRFFFQkFRVU [...]
    url: https://127.0.0.1:9743/pod
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: pod.network-node-identity.openshift.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - '*'
    apiVersions:
    - '*'
    operations:
    - UPDATE
    resources:
    - pods/status
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
