must-gather/cluster-scoped-resources/admissionregistration.k8s.io/validatingwebhookconfigurations/snapshot.storage.k8s.io.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
    service.beta.openshift.io/inject-cabundle: "true"
  creationTimestamp: "2024-10-24T13:03:29Z"
  generation: 2
  labels:
    app: csi-snapshot-webhook
  managedFields:
  - apiVersion: admissionregistration.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:include.release.openshift.io/self-managed-high-availability: {}
          f:include.release.openshift.io/single-node-developer: {}
          f:service.beta.openshift.io/inject-cabundle: {}
        f:labels:
          .: {}
          f:app: {}
      f:webhooks:
        .: {}
        k:{"name":"volumegroupsnapshotclasses.groupsnapshot.storage.k8s.io"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
        k:{"name":"volumesnapshotclasses.snapshot.storage.k8s.io"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
    manager: csi-snapshot-controller-operator
    operation: Update
    time: "2024-10-24T13:03:29Z"
  - apiVersion: admissionregistration.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:webhooks:
        k:{"name":"volumegroupsnapshotclasses.groupsnapshot.storage.k8s.io"}:
          f:clientConfig:
            f:caBundle: {}
        k:{"name":"volumesnapshotclasses.snapshot.storage.k8s.io"}:
          f:clientConfig:
            f:caBundle: {}
    manager: service-ca-operator
    operation: Update
    time: "2024-10-24T13:03:35Z"
  name: snapshot.storage.k8s.io
  resourceVersion: "6610"
  uid: b6e2fd9f-eea5-4fed-803b-573690d654ac
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURVVENDQWptZ0F3SUJBZ0lJSGlIQkp0dUUyamN3RFFZSktvWklodmNOQVFFTEJRQXdOakUwTURJR0ExVUUKQXd3cmIzQmxibk5vYVdaMExYTmxjblpwWTJVdGMyVnlkbWx1WnkxemFXZHVaWEpBTVRjeU9UYzNOVEF4TURBZQpGdzB5TkRFd01qUXhNekF6TWpsYUZ3MHlOakV5TWpNeE16QXpNekJhTURZeE5EQXlCZ05WQkFNTUsyOXdaVzV6CmFHbG1kQzF6WlhKMmFXTmxMWE5sY25acGJtY3RjMmxuYm1WeVFERTNNamszTnpVd01UQXdnZ0VpTUEwR0NTcUcKU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRQ28wMFhCM256RUdKODEwRkE5Q3JNT0l0MHhJUFk0ZGJnMAo0c0hOdG1hbUVlUl [...]
    service:
      name: csi-snapshot-webhook
      namespace: openshift-cluster-storage-operator
      path: /volumesnapshot
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: volumesnapshotclasses.snapshot.storage.k8s.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - snapshot.storage.k8s.io
    apiVersions:
    - v1beta1
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - volumesnapshotclasses
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURVVENDQWptZ0F3SUJBZ0lJSGlIQkp0dUUyamN3RFFZSktvWklodmNOQVFFTEJRQXdOakUwTURJR0ExVUUKQXd3cmIzQmxibk5vYVdaMExYTmxjblpwWTJVdGMyVnlkbWx1WnkxemFXZHVaWEpBTVRjeU9UYzNOVEF4TURBZQpGdzB5TkRFd01qUXhNekF6TWpsYUZ3MHlOakV5TWpNeE16QXpNekJhTURZeE5EQXlCZ05WQkFNTUsyOXdaVzV6CmFHbG1kQzF6WlhKMmFXTmxMWE5sY25acGJtY3RjMmxuYm1WeVFERTNNamszTnpVd01UQXdnZ0VpTUEwR0NTcUcKU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRQ28wMFhCM256RUdKODEwRkE5Q3JNT0l0MHhJUFk0ZGJnMAo0c0hOdG1hbUVlUl [...]
    service:
      name: csi-snapshot-webhook
      namespace: openshift-cluster-storage-operator
      path: /volumegroupsnapshot
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: volumegroupsnapshotclasses.groupsnapshot.storage.k8s.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - groupsnapshot.storage.k8s.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - volumegroupsnapshotclasses
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
